[package]
name = "htslurp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htslurp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["abi3-py310"] }
noodles-htsget = "0.6.0"
