[package]
name = "htslurp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "htslurp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["abi3-py310", "experimental-async"] }
tokio = { version = "1.38.0", features = ["tokio-macros"] }
futures = "0.3.30"
noodles = { version = "0.85.0", features = ["vcf", "bam", "cram", "bcf", "htsget"] }
testcontainers = { version = "0.23.1", features = ["blocking"] }
