[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "htslurp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[project.optional-dependencies]
tests = [
    "pytest",
]
integration = [
    "pytest",
    "testcontainers>=4,<5",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
markers = [
    "integration: end-to-end tests that need Docker (spins up an htsget-rs container)",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["python"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true
