[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "htslurp"
description = "Stream alignment records from htsget servers"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://cmdoret.github.io/htslurp/"
Repository = "https://github.com/cmdoret/htslurp"
[project.optional-dependencies]
tests = [
    "pytest",
]
integration = [
    "pytest",
    "testcontainers>=4,<5",
]
docs = [
    "mkdocs-material>=9,<10",
    "mkdocstrings[python]>=1,<2",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = ["-m", "not integration"]
markers = [
    "integration: end-to-end tests that need Docker (spins up an htsget-rs container)",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["python"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true
